--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiocqhttp~=1.3.0
 beautifulsoup4~=4.8.2
-httpx~=0.25.0
+httpx~=0.24.1
 lxml~=4.9.3
 matplotlib~=3.2.1
 nonebot~=1.9.1
@@ -11,4 +11,4 @@ PicImageSearch~=3.9.5
 Pillow~=10.1.0
 pytz~=2020.1
 PyYAML~=6.0.1
-tortoise~=0.1.1
+tortoise-orm~=0.17.8
