--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-aiocqhttp~=1.3.0
+aiocqhttp~=1.pyth3.0
 beautifulsoup4~=4.8.2
 httpx~=0.24.1
-lxml~=4.9.3
 matplotlib>=3.5.0
 nonebot~=1.9.1
+nonebot[scheduler]~=1.9.1
 numpy~=1.26.1
 openai~=1.60.2
-pandas~=1.1.3
-PicImageSearch~=3.9.5
+PicImageSearch~=3.12.9
 Pillow~=10.3.0
 pytz~=2020.1
 PyYAML~=6.0.1
