--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
-aiocqhttp~=1.pyth3.0
+aiocqhttp~=1.3.0
 beautifulsoup4~=4.8.2
-httpx~=0.24.1
-matplotlib>=3.5.0
+httpx~=0.28.1
+matplotlib~=3.2.2
 nonebot~=1.9.1
 nonebot[scheduler]~=1.9.1
 numpy~=1.26.1
 openai~=1.109.1
 PicImageSearch~=3.12.9
-Pillow~=10.3.0
+Pillow~=10.1.0
 pytz~=2020.1
 PyYAML~=6.0.1
 tortoise-orm~=0.17.8
-requests~=2.32.4
+requests~=2.31.0
+
+lxml~=5.4.0
+aiohttp~=3.9.0
+torch~=2.4.1
+torchsampler~=0.1.2
+torchvision~=0.19.1
+tortoise~=0.1.1
